Version 0.6.1:
    * Added logging in SPrediXcan to warn when the covariance matrix is close to singular
    * Bug fixing: Addressed case when SMultiXcan is used with a subset of the GTEx models
Version 0.6.0:
    * Initial release of MulTiXcan (multi-tissue predixcan) implementation
Version 0.5.9:
    * Addressed edge case when the GWAS has no intersection with the prediciton model (most likely a naming issue)
Version 0.5.8:
    * Added --gwas_file to MetaXcan so that a single GWAS file can be used as input (alternative to --gwas_folder and --gwas_file_pattern)
Version 0.5.7:
    * Now input GWAS p-values that are too small (i.e. numerical resolution doesn't yield a finite zscore) can be thresholded as approximation.
Version 0.5.6.4:
    * The fix from the previous version didn't work all that well in most cases.
Version 0.5.6.3:
    * A warning was being issued when it shouldn't had been.
Version 0.5.6.2:
    * Fixed another corner case with input gwas files (empty line in gwas file)
Version 0.5.6.1:
    * Fixed some corner cases with input gwas files
Version 0.5.5
    * Had MetaXcan output keep the gene's ensemble id versions by default.
    * Updated Readme. Now points to MetaXcan's application to a 100 public GWAS.
Version 0.5.4
    * Bugfix for the case when there is no intersection between the prediction model's snps and  the GWAS'
    * Updated Readme.
Version 0.5.2
    * Had the MetaXcan output contain explicit -NA-
Version 0.5.1
    * Minor fix in M03_betas: alleles after reconciliation is now right (since it wasn't being used it held no impact)
Version 0.5.0
    * Overhauled logic, added more unit test coverage, switched to pandas for implementation, performance improvements
    * Header changed to lowercase
    * Parameters name change:
      beta_zscore_column to zscore_column
      weight_db_path to model_db_path
      compressed argument no longer needed
    * Writing intermediate files is no longer needed for MetaXcan, it is now optional