@@ -39,6 +39,7 @@ def _inv(a, cf, rcond, epsilon):
         epsilon = numpy.diag(epsilon)
         a = a + epsilon
     a = a.conjugate()
+    #WARNING! the "s" eigenvalues might not equal the eigenvalues of eigh
     u, s, vt = numpy.linalg.svd(a, 0)
     m = u.shape[0]
     n = vt.shape[1]
@@ -52,6 +53,7 @@ def _inv(a, cf, rcond, epsilon):
             s[i] = 1. / s[i]
         else:
             s[i] = 0.
+            eigen[i] = 0.
     n_indep = numpy.count_nonzero(s)
     res = dot(transpose(vt), multiply(s[:, newaxis], transpose(u)))
     return wrap(res), n_indep, eigen
